--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -32,10 +32,14 @@
 }
 
 .mainC .main-content .contact .details .location-box {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   text-align: left;
-  padding: 20px 20px 10px 20px;
+  padding: 13px 15px 1px 15px;
   background-color: var(--secondBacground);
+}
+
+.mainC .main-content .contact .details .location-box a {
+  color: inherit;
 }
 
 .mainC .main-content .contact .map {
