--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -106,6 +106,7 @@
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   background-color: #ffffff26;
+  text-decoration: none;
 }
 
 .home .service .title {
