--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -74,6 +74,7 @@
     &:hover{
       transform: scale(1.3);
       background-color: #ffffff26;
+      text-decoration: none;
     }
   }
   .service .title {
