--- a/src/shared-components/Header/style.css
+++ b/src/shared-components/Header/style.css
@@ -84,6 +84,8 @@
   text-decoration: none;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 #root #main-header .container .nav li ul {
