--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -77,6 +77,8 @@
           -webkit-transition: all 0.4s ease-in-out;
           -moz-transition: all 0.4s ease-in-out;
           transition: all 0.4s ease-in-out;
+          text-transform: uppercase;
+          cursor: pointer;
         }
       }
       .nav {
