--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -64,7 +64,7 @@
           -webkit-transition: all 250ms ease-in-out 0s;
         }
         .testimonial {
-overflow: initial;
+          overflow: initial;
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
@@ -114,7 +114,8 @@ overflow: initial;
           width: min-content;
           display: flex;
           flex-direction: column;
-          box-shadow: 0px 20px 70px 0px #262a4c26;
+          box-shadow: 0px 6px 21px 0px #2d1c1c29;
+          // box-shadow: 0px 20px 70px 0px #262a4c26;
           border-radius: 8px;
           margin-bottom: 5.5%;
           background-color: #f6f6f6;
