--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -214,3 +214,31 @@
     display: none;
   }
 }
+
+.divM {
+   display: inline-block;
+    padding-right: 22px;
+    font-size: 16px;
+    > a {
+      display: block;
+      position: relative;
+      padding: 10px 5%;
+      background-color: #00000008;
+      border-bottom: 1px solid #00000008;
+      color: #000;
+      text-decoration: none;
+      transition: all 0.4s ease-in-out;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+    .menu-item {
+     
+      width: 100%;
+      a{
+        width: 200px;
+        padding: 8px 20px;
+        padding-left: 0;
+        border-bottom: 1px solid #00000008;
+      }
+    }
+}
