--- a/src/shared-components/Footer/style.css
+++ b/src/shared-components/Footer/style.css
@@ -14,12 +14,12 @@
 #footer-info {
     float: left;
     padding-bottom: 10px;
-    color: #666;
+    color: #9e9e9e;
     text-align: left;
     font-size: 14px;
 }
 
 #footer-info a {
-    color: #666;
+    color: #9e9e9e;
     font-weight: 700;
 }
