--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -69,10 +69,10 @@
         display: inline-block;
         padding-right: 22px;
         font-size: 16px;
-        a {
+        a,.serv  {
           display: block;
           position: relative;
-          color: rgba(0, 0, 0, 0.6);
+          color: #000;
           text-decoration: none;
           -webkit-transition: all 0.4s ease-in-out;
           -moz-transition: all 0.4s ease-in-out;
@@ -190,10 +190,20 @@
           display: block;
           padding: 10px 5%;
           border-bottom: 1px solid rgba(0, 0, 0, 0.03);
-          &.hasCh {
-            background-color: rgba(0, 0, 0, 0.03);
-          }
         }
+
+
+      }
+      .hasCh {
+        background-color: rgba(0, 0, 0, 0.03);
+        display: block;
+        position: relative;
+        text-decoration: none;
+        transition: all 0.4s ease-in-out;
+        text-transform: uppercase;
+        cursor: pointer;
+        padding: 10px 5%;
+        border-bottom: 1px solid rgba(0,0,0,0.03);
       }
     }
   }
