--- a/src/style.css
+++ b/src/style.css
@@ -1,309 +1,2 @@
-.fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-}
-
-@-webkit-keyframes fadeInLeftBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-2000px, 0, 0);
-    transform: translate3d(-2000px, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInLeftBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-2000px, 0, 0);
-    transform: translate3d(-2000px, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInLeftBig {
-  -webkit-animation-name: fadeInLeftBig;
-  animation-name: fadeInLeftBig;
-}
-
-@-webkit-keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@-webkit-keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-200px, 100%, 0);
-    transform: translate3d(-200px, 100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@-webkit-keyframes fadeInTop {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -20%, 0);
-            transform: translate3d(0, -20%, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes fadeInTop {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -20%, 0);
-            transform: translate3d(0, -20%, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-  }
-}
-
-.fadeInTop {
-  -webkit-animation-name: fadeInTop;
-  animation-name: fadeInTop;
-}
-
-@keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-200px, 100%, 0);
-    transform: translate3d(-200px, 100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInUp {
-  -webkit-animation-name: fadeInUp;
-  animation-name: fadeInUp;
-}
-
-@-webkit-keyframes fadeInUpBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUpBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  body .mainC .main-content {
-    font-size: 14px;
-  }
-  body .mainC .main-content .centerContent {
-    width: 92%;
-  }
-  body .mainC .main-content .description__row__col2 {
-    margin-right: 0;
-    min-width: 100%;
-  }
-  body .mainC .main-content .description__row .testimonial {
-    padding: 5px;
-  }
-}
-
-#main-header {
-  background-color: #00000096;
-  border-bottom: 1px solid #858585;
-}
-
-#main-header .container #top-menu > li.menu-item > a {
-  color: #fff !important;
-}
-
-#main-header .container #top-menu .sub-menu li.menu-item a {
-  color: #000;
-}
-
-.mainC .main-content__top__title {
-  -webkit-animation-name: fadeInLeftBig;
-  animation-name: fadeInLeftBig;
-  -webkit-animation-duration: 900ms;
-  animation-duration: 900ms;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.mainC .main-content__top__title .description {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-}
-
-.mainC .main-content .description__row {
-  -webkit-animation-name: fadeInUp;
-          animation-name: fadeInUp;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-
-body .mainC .main-content {
-  margin-top: 0;
-}
-
-body .mainC .main-content__top {
-  padding-top: 95px;
-}
-
-body .mainC.fixedH #main-header {
-  background-color: var(--mainBacground);
-}
-
-body .mainC.fixedH #main-header .container #top-menu > li.menu-item > a {
-  color: #000 !important;
-}
-
-@media (max-width: 1024px) {
-  body .mainC .main-content__top {
-    padding-top: 0;
-  }
-  #main-header .container #top-menu > li.menu-item > a {
-    color: #000 !important;
-  }
-}
-
-.mainC .main-content .description__row > div {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  overflow: hidden;
-  position: relative;
-}
-
-.mainC .main-content .description__row > div img {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-
-.mainC .main-content .description__row > div:hover {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  -webkit-animation-name: example;
-          animation-name: example;
-  -webkit-animation-duration: 0.25s;
-          animation-duration: 0.25s;
-  border-left: 8px solid var(--mainActiveBacground);
-  -webkit-box-shadow: 0 14px 28px #00000040, 0 10px 10px #00000038;
-          box-shadow: 0 14px 28px #00000040, 0 10px 10px #00000038;
-}
-
-.mainC .main-content .description__row > div:hover img {
-  -webkit-transform: scale(1.05) translateZ(0);
-  transform: scale(1.05) translateZ(0);
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-
-.mainC .main-content .description__row__col2:after,
-.mainC .main-content .description__row__col1:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scaleY(0);
-          transform: scaleY(0);
-  -webkit-transform-origin: center center;
-          transform-origin: center center;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-
-.mainC .main-content .description__row__col2:hover::after,
-.mainC .main-content .description__row__col1:hover::after {
-  -webkit-transform: scaleY(1);
-          transform: scaleY(1);
-}
-
-.mainC {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  /* Firefox < 16 */
-  /* Internet Explorer */
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-}
-
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-/* Firefox < 16 */
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-/* Internet Explorer */
-
-.mainC .main-content .description__row .text-center {
-  display: none;
-}
+.fadeInLeft{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft}@-webkit-keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeftBig{-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig}@-webkit-keyframes fadeInRight{0%{opacity:0;-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(-200px, 100%, 0);transform:translate3d(-200px, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInTop{from{opacity:0;-webkit-transform:translate3d(0, -20%, 0);transform:translate3d(0, -20%, 0)}to{opacity:1;-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0)}}@keyframes fadeInTop{from{opacity:0;-webkit-transform:translate3d(0, -20%, 0);transform:translate3d(0, -20%, 0)}to{opacity:1;-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0)}}.fadeInTop{-webkit-animation-name:fadeInTop;animation-name:fadeInTop}@keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(-200px, 100%, 0);transform:translate3d(-200px, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInUp{-webkit-animation-name:fadeInUp;animation-name:fadeInUp}@-webkit-keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@media screen and (max-width: 1023px){body .mainC .main-content{font-size:14px}body .mainC .main-content .centerContent{width:92%}body .mainC .main-content .description__row__col2{margin-right:0;min-width:100%}body .mainC .main-content .description__row .testimonial{padding:5px}}#main-header{background-color:#00000096;border-bottom:1px solid #858585}#main-header .container #top-menu>li.menu-item>a,#main-header .container #top-menu>li.menu-item>.serv{color:#fff !important}#main-header .container #top-menu .sub-menu li.menu-item a{color:#000}.mainC .main-content__top__title{-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig;-webkit-animation-duration:900ms;animation-duration:900ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.mainC .main-content__top__title .description{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft;-webkit-animation-duration:1s;animation-duration:1s}.mainC .main-content .description__row{-webkit-animation-name:fadeInUp;animation-name:fadeInUp;-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}body .mainC .main-content{margin-top:0}body .mainC .main-content__top{padding-top:95px}body .mainC.fixedH #main-header{background-color:var(--mainBacground)}body .mainC.fixedH #main-header .container #top-menu>li.menu-item>a{color:#000 !important}@media (max-width: 1024px){body .mainC .main-content__top{padding-top:0}#main-header .container #top-menu>li.menu-item>a{color:#000 !important}}.mainC .main-content .description__row>div{-webkit-transition:all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);transition:all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);overflow:hidden;position:relative}.mainC .main-content .description__row>div img{-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out}.mainC .main-content .description__row>div:hover{-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;border-top-left-radius:10px;border-bottom-left-radius:10px;-webkit-animation-name:example;animation-name:example;-webkit-animation-duration:0.25s;animation-duration:0.25s;border-left:8px solid var(--mainActiveBacground);-webkit-box-shadow:0 14px 28px #00000040, 0 10px 10px #00000038;box-shadow:0 14px 28px #00000040, 0 10px 10px #00000038}.mainC .main-content .description__row>div:hover img{-webkit-transform:scale(1.05) translateZ(0);transform:scale(1.05) translateZ(0);-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out}.mainC .main-content .description__row__col2:after,.mainC .main-content .description__row__col1:after{content:"";position:absolute;bottom:0;left:0;width:100%;height:100%;-webkit-transform:scaleY(0);transform:scaleY(0);-webkit-transform-origin:center center;transform-origin:center center;-webkit-transition:-webkit-transform 0.3s;transition:-webkit-transform 0.3s;transition:transform 0.3s;transition:transform 0.3s, -webkit-transform 0.3s}.mainC .main-content .description__row__col2:hover::after,.mainC .main-content .description__row__col1:hover::after{-webkit-transform:scaleY(1);transform:scaleY(1)}.mainC{-webkit-animation:fadein 2s;animation:fadein 2s}@keyframes fadein{from{opacity:0}to{opacity:1}}@-webkit-keyframes fadein{from{opacity:0}to{opacity:1}}.mainC .main-content .description__row .text-center{display:none}
 /*# sourceMappingURL=style.css.map */
